frb_example/pure_dart_multi/rust/extra_c_output_path_2/c_output_3.h

typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_SharedComplexEnumInAllBlocks_Empty {

} wire_SharedComplexEnumInAllBlocks_Empty;
typedef struct wire_SharedComplexEnumInAllBlocks_Primitives {
  int32_t int32;
  double float64;
  bool boolean;
} wire_SharedComplexEnumInAllBlocks_Primitives;
typedef struct wire_SharedComplexEnumInAllBlocks_Nested {
  struct wire_SharedComplexEnumInAllBlocks *field0;
} wire_SharedComplexEnumInAllBlocks_Nested;
typedef struct wire_SharedComplexEnumInAllBlocks_Optional {
  int32_t *field0;
  struct wire_uint_8_list *field1;
} wire_SharedComplexEnumInAllBlocks_Optional;
typedef struct wire_float_32_list {
  float *ptr;
  int32_t len;
} wire_float_32_list;
typedef struct wire_SharedComplexEnumInAllBlocks_Buffer {
  struct wire_float_32_list *field0;
} wire_SharedComplexEnumInAllBlocks_Buffer;
typedef struct wire_SharedComplexEnumInAllBlocks_Enums {
  int32_t field0;
} wire_SharedComplexEnumInAllBlocks_Enums;
typedef struct wire_SharedComplexEnumInAllBlocks_BytesArray {
  struct wire_uint_8_list *field0;
} wire_SharedComplexEnumInAllBlocks_BytesArray;
typedef union SharedComplexEnumInAllBlocksKind {
  struct wire_SharedComplexEnumInAllBlocks_Empty *Empty;
  struct wire_SharedComplexEnumInAllBlocks_Primitives *Primitives;
  struct wire_SharedComplexEnumInAllBlocks_Nested *Nested;
  struct wire_SharedComplexEnumInAllBlocks_Optional *Optional;
  struct wire_SharedComplexEnumInAllBlocks_Buffer *Buffer;
  struct wire_SharedComplexEnumInAllBlocks_Enums *Enums;
  struct wire_SharedComplexEnumInAllBlocks_BytesArray *BytesArray;
} SharedComplexEnumInAllBlocksKind;
typedef struct wire_SharedComplexEnumInAllBlocks {
  int32_t tag;
  union SharedComplexEnumInAllBlocksKind *kind;
} wire_SharedComplexEnumInAllBlocks;
typedef struct wire_list_shared_complex_enum_in_all_blocks {
  struct wire_SharedComplexEnumInAllBlocks *ptr;
  int32_t len;
} wire_list_shared_complex_enum_in_all_blocks;
typedef struct wire_SharedStructInAllBlocks {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
  struct wire_list_shared_complex_enum_in_all_blocks *enum_list;
} wire_SharedStructInAllBlocks;
typedef struct wire_SharedStructInBlock1And2 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock1And2;
typedef struct wire_CrossSharedStructInBlock2And3 {
  struct wire_uint_8_list *name;
} wire_CrossSharedStructInBlock2And3;
typedef struct wire_SharedStructInBlock2And3 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock2And3;
typedef struct wire_SharedStructOnlyForSyncTest {
  struct wire_uint_8_list *name;
  double score;
} wire_SharedStructOnlyForSyncTest;
void wire_test_static_method__static_method__SharedStructInBlock1And2(int64_t port_,
                                                                      struct wire_uint_8_list *message);
void wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocks(int64_t port_,
                                                                  int32_t that,
                                                                  struct wire_uint_8_list *message);
void wire_test_static_enum_method__static_method__SharedWeekdaysEnumInAllBlocks(int64_t port_,
                                                                                struct wire_uint_8_list *message);
void wire_test_method__method__CrossSharedStructInBlock2And3(int64_t port_,
                                                             struct wire_CrossSharedStructInBlock2And3 *that,
                                                             struct wire_uint_8_list *message);
void wire_test_static_method__static_method__CrossSharedStructInBlock2And3(int64_t port_,
                                                                           struct wire_uint_8_list *message);
void wire_test_method__method__SharedStructInBlock2And3(int64_t port_,
                                                        struct wire_SharedStructInBlock2And3 *that,
                                                        struct wire_uint_8_list *message);
void wire_test_static_method__static_method__SharedStructInBlock2And3(int64_t port_,
                                                                      struct wire_uint_8_list *message);
void wire_test_method__method__SharedStructOnlyForSyncTest(int64_t port_,
                                                           struct wire_SharedStructOnlyForSyncTest *that,
                                                           struct wire_uint_8_list *message);
void wire_test_static_method__static_method__SharedStructOnlyForSyncTest(int64_t port_,
                                                                         struct wire_uint_8_list *message);
int32_t *new_box_autoadd_i32(int32_t value);
struct wire_SharedComplexEnumInAllBlocks *new_box_autoadd_shared_complex_enum_in_all_blocks(void);
struct wire_SharedStructInAllBlocks *new_box_autoadd_shared_struct_in_all_blocks(void);
struct wire_SharedStructInBlock1And2 *new_box_autoadd_shared_struct_in_block_1_and_2(void);
struct wire_SharedStructInBlock2And3 *new_box_autoadd_shared_struct_in_block_2_and_3(void);
struct wire_SharedComplexEnumInAllBlocks *new_box_shared_complex_enum_in_all_blocks(void);
struct wire_float_32_list *new_float_32_list(int32_t len);
struct wire_list_shared_complex_enum_in_all_blocks *new_list_shared_complex_enum_in_all_blocks(int32_t len);
struct wire_uint_8_list *new_uint_8_list(int32_t len);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Primitives(void);